--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -69,3 +69,28 @@ header{
     
 }
 
+.tabela-brasileirao{
+    background-color: #FFF;
+    border-radius: 50px;
+    width: 200px;
+    margin: 30px 70px;
+    text-align: center;
+    padding: 10px;
+}
+
+.partidas{
+    margin-top: 150px;
+}
+
+footer{
+    color: #FFF;
+    background-color: #201e1e;
+    text-align: center;
+    margin-top: 50px;
+    padding: 20px;
+}
+
+footer img{
+    width: 500px;
+}
+
