--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -13,6 +13,12 @@ header{
 .logo-button{
     border: 0;
     cursor: pointer;
+    background-color: #FFF;
+}
+
+.logo-button:disabled{
+    background-color: #FFF;
+    border: none;
 }
 
 .flex-box{
@@ -45,8 +51,8 @@ header{
 }
 
 .noticia{
-    margin: 115px 0;
-    width: 780px;
+    margin: 115px 40px;
+    width: 1100px;
 }
 
 .navbar{
@@ -69,6 +75,11 @@ header{
     
 }
 
+.info-jogo{
+    display: flex;
+    justify-content: space-around;
+}
+
 .tabela-brasileirao{
     background-color: #FFF;
     border-radius: 50px;
@@ -78,17 +89,22 @@ header{
     padding: 10px;
 }
 
+.brasileirao{
+    margin: 30px 30px;
+    width: 500px;
+}
+
 .partidas{
-    margin-top: 150px;
-    width: 350px;
+    margin: 100px 250px;
+    width: 500px;
 }
 
 footer{
     color: #FFF;
     background-color: #201e1e;
     text-align: center;
-    margin-top: 50px;
-    padding: 20px;
+    margin-top: 200px;
+    padding: 40px;
 }
 
 footer img{
