--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -28,7 +28,7 @@ header{
 }
 
 .logo-header{
-    width:150px;
+    width:250px;
     margin: 30px 70px;
 }
 
@@ -90,14 +90,54 @@ header{
 }
 
 .brasileirao{
-    margin: 30px 30px;
+    margin: 30px 70px;
     width: 500px;
 }
 
 .partidas{
-    margin: 100px 250px;
-    width: 500px;
+    margin:150px 250px;
+    width: 700px;
 }
+
+.copyright{
+    margin: 15px;
+}
+
+select{
+    padding: 20px;
+    border-radius: 10px;
+    text-align: start;
+    font-size: 20px;
+}
+
+#campeonato{
+    margin: 60px 70px 10px;
+}
+
+.g5{
+    margin: 10px 70px;
+    color: #FFF;
+}
+
+.artilharia{
+    margin: 10px 10px;
+    color: #FFF;
+}
+.lesoes{
+    margin: 10px 10px;
+    color: #FFF;
+}
+
+.info{
+    display: flex;
+    justify-content: center;
+}
+
+.info-content{
+    margin: 10px 10px;
+    color: #FFF;
+}
+
 
 footer{
     color: #FFF;
