--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -114,18 +114,13 @@ select{
     margin: 60px 70px 10px;
 }
 
-.g5{
-    margin: 10px 70px;
-    color: #FFF;
+.info-linha{
+    display: flex;
+    justify-content: center;
 }
 
-.artilharia{
-    margin: 10px 10px;
-    color: #FFF;
-}
-.lesoes{
-    margin: 10px 10px;
-    color: #FFF;
+.info-linha img{
+    vertical-align:middle;
 }
 
 .info{
@@ -138,6 +133,61 @@ select{
     color: #FFF;
 }
 
+.melhores{
+    margin: 10px 70px;
+    display: flex;
+    object-fit: cover;
+}
+.melhores img{
+    height: 250px;
+    width: 250px;
+}
+
+.proximos{
+    margin: 10px 70px;
+}
+
+.proximos img{
+    width: 520px;
+}
+
+.column2{
+    display: flex;
+}
+
+.noticia-basquete{
+    color: #FFF;
+    margin: 90px 200px;
+}
+
+.noticia-basquete img{
+    width: 800px;
+    margin: 10px 5px ;
+}
+
+.noticia-grande{
+    margin: 30px 40px;;
+}
+
+.noticias-horizontal{
+    display: flex;
+}
+
+.noticias-horizontal img{
+    margin: 10px 40px;
+    width: 550px;
+}
+
+.formacao-noticias{
+    display: flex;
+}
+
+.noticia-lateral img{
+    display: flex;
+    flex-direction: column;
+    width: 550px;
+    margin: 37px 0 0 0;
+}
 
 footer{
     color: #FFF;
