--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -180,16 +180,17 @@ select{
 
 .noticia-basquete{
     color: #FFF;
-    margin: 90px 200px;
+    margin-top: 150px;
 }
 
 .noticia-basquete img{
-    width: 800px;
-    margin: 10px 5px ;
+    width: 635px;
+    margin: 25px 10px ;
 }
 
-.noticia-grande{
-    margin: 30px 40px;;
+.noticia-grande img{
+    margin: 30px 40px;
+    width: 900px;
 }
 
 .noticias-horizontal{
@@ -197,8 +198,8 @@ select{
 }
 
 .noticias-horizontal img{
-    margin: 10px 40px;
-    width: 550px;
+    margin: 10px 60px;
+    width: 350px;
 }
 
 .formacao-noticias{
@@ -208,8 +209,8 @@ select{
 .noticia-lateral img{
     display: flex;
     flex-direction: column;
-    width: 550px;
-    margin: 37px 0 0 0;
+    width: 350px;
+    margin: 60px 0 0 0;
 }
 
 footer{
