--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -12,6 +12,8 @@ header{
 }
 
 .addtime{
+    border: solid 2px #084887;
+    color: #084887;
     font-size: 20px;
     font-weight: bold;
     border-radius: 100%;
@@ -21,7 +23,15 @@ header{
     height: 40px;
     width: 40px;
     cursor: pointer;
+    transition: 0.6s;
 }
+
+.addtime:hover{
+    transition: 0.6s;
+    color: #F58A07;
+    border:solid 2px #F58A07;
+}
+
 
 .logo-button{
     border: 0;
@@ -237,4 +247,6 @@ footer{
 footer img{
     width: 500px;
 }
+
+
 
