--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -9,6 +9,8 @@ body{
 
 header{
     background-color: #FFF;
+    box-shadow: 0px 0px 8px 2px #201e1e;
+    margin-bottom: 10px;
 }
 
 .addtime{
@@ -19,7 +21,7 @@ header{
     border-radius: 100%;
     padding: 5px;
     position: absolute;
-    left: 350px;
+    left: 310px;
     height: 40px;
     width: 40px;
     cursor: pointer;
@@ -51,8 +53,8 @@ header{
 }
 
 .logo-header{
-    width:250px;
-    margin: 30px 70px;
+    width:200px;
+    margin: 20px 70px;
 }
 
 .info-principal{
@@ -67,6 +69,7 @@ header{
     border-radius: 50px;
     text-align: center;
     width: 150px;
+    box-shadow: 0px 0px 8px 2px #201e1e;
 }
 
 .tabela{
