--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -10,7 +10,7 @@ body{
 header{
     background-color: #FFF;
     box-shadow: 0px 0px 8px 2px #201e1e;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
 }
 
 .addtime{
@@ -35,13 +35,13 @@ header{
 }
 
 
-.logo-button{
+.header-button{
     border: 0;
     cursor: pointer;
     background-color: #FFF;
 }
 
-.logo-button:disabled{
+.header-button:disabled{
     background-color: #FFF;
     border: none;
 }
@@ -268,6 +268,30 @@ footer img{
         height: 250px;
         
     }
+}
+.perfil-css{
+    
+}
+#inicio-banner{
+    display: flex;
+}
+.banner{
+    position: static;
+    height: 450px;
+    width: 1000px;
+    object-fit: cover;
+    display: flex;
+}
+.foto-perfil{
+    
+}
+.nome-perfil{
+
+}
+.time-fav{
+ width: 350px;
+ object-fit: cover;
+ height: auto;
 }
 
 @media screen and (max-width: 900px){
