--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -17,20 +19,66 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 600px;
+    height: 100vh;
+    width: 100%;
 }
-
 .cadastro{
-    width: 400px;
+    width: 600px;
+    height: 500px;
     background-color: #FFF;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     padding: 20px;
+    && .submit{
+        text-align: center;
+        padding: 5px;
+        background-color: #FFF;
+        border: 1.5px solid #084887;
+        color: #084887;
+        text-transform: uppercase;
+        width: 180px;
+        margin: 30px;
+        align-self: center;
+        transition: 0.9s;
+    }
+    && .submit:hover{
+        transition: 0.9s;
+        color: #F58A07;
+        border: 1.5px solid #F58A07;
+    }
+    && h1{
+        display: flex;
+        justify-content: center;
+    }
+    && label{
+        font-weight: bold;
+        font-family: "IBM Plex Sans", sans-serif;
+        margin-top: 15px;
+        color: #201e1e;
+    }
+    && input{
+        display: flex;
+        justify-content: center;
+        padding: 8px;
+        width: 500px;
+    }
 }
 
-.cadastro img{
+.cadastro-form{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    && a{
+        text-decoration: none;
+        color: #084887;
+    }
+}
+
+.logo-login{
     width: 200px;
+    margin-bottom: 20px;
 }
 
 .addtime{
