Co-authored-by: Viniciuslvargas <Viniciuslvargas@users.noreply.github.com>

--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -106,7 +106,7 @@ header{
 .header-button{
     border: 0;
     cursor: pointer;
-    background-color: #FFF;
+    background-color:transparent;
 }
 
 .header-button:disabled{
