--- a/4lines-react/src/style/styleAdm.css
+++ b/4lines-react/src/style/styleAdm.css
@@ -9,3 +9,26 @@
 .adm-header{
     background-color: orange;
 }
+
+.addtime-adm{
+    border: solid 2px #084887;
+    background-color: transparent;
+    color: #084887;
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: 100%;
+    padding: 5px;
+    position: absolute;
+    left: 310px;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    transition: 0.6s;
+}
+.addtime-adm:hover{
+    transition: 0.6s;
+    color: #F58A07;
+    border:solid 2px #F58A07;
+    text-shadow: 2px 1px 2px #754e1f;
+    box-shadow: 1px 1px 1px 1px #754e1f;
+}
