--- a/4lines-react/src/style/styleAdm.css
+++ b/4lines-react/src/style/styleAdm.css
@@ -32,3 +32,48 @@
     text-shadow: 2px 1px 2px #754e1f;
     box-shadow: 1px 1px 1px 1px #754e1f;
 }
+.btn-14 {
+    background: rgb(255, 151, 0);
+    border: none;
+    z-index: 1;
+    position: relative; /* Adiciona position relativa para que :after posicionado absolutamente funcione corretamente */
+    width: 70px; /* Define a largura do botão */
+    height: 30px; /* Define a altura do botão */
+    line-height: 30px; /* Ajusta o alinhamento do texto verticalmente */
+    text-align: center; /* Centraliza o texto horizontalmente */
+    display: inline-block; /* Garante que o botão mantenha as dimensões definidas */
+    margin: 4px; /* Define a margem ao redor do botão */
+    box-shadow: 0 0 0 4px blue; /* Adiciona uma borda azul em torno do botão usando box-shadow */
+}
+
+.btn-14:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 5px;
+    background-color: #eaf818;
+    background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
+    box-shadow: 
+        inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+        7px 7px 20px 0px rgba(0, 0, 0, .1),
+        4px 4px 5px 0px rgba(0, 0, 0, .1);
+    transition: all 0.3s ease;
+}
+
+.btn-14:hover {
+    color: #000;
+}
+
+.btn-14:hover:after {
+    top: auto;
+    bottom: 0;
+    height: 100%;
+}
+
+.btn-14:active {
+    top: 2px;
+}
