--- a/4lines-react/src/style/styleAdm.css
+++ b/4lines-react/src/style/styleAdm.css
@@ -8,6 +8,11 @@
 
 .adm-header{
     background-color: orange;
+    
+}
+.nav-editor{
+    display: flex;
+    align-items: center;
 }
 
 .addtime-adm{
