--- a/4lines-react/src/style/style.css
+++ b/4lines-react/src/style/style.css
@@ -150,24 +150,65 @@ header{
     align-items: center;
 }
 
-.navbar{
+.navbar {
     display: flex;
     justify-content: center;
 }
 
-.navbar button{
+.navbar button {
+    display: inline-block;
     background-color: #FFF;
     margin: 30px;
     border-radius: 100%;
     border: 0;
     cursor: pointer;
+    transition: 1s;
+    border: transparent 5px solid;
+    position: relative;
+    overflow: hidden; /* Add this line to hide overflow */
 }
 
-.navbar button img{
+.navbar button:hover {
+    filter: brightness(55%);
+    transition: 1s;
+    border: #F58A07 5px solid;
+}
+
+.navbar .button-content {
+    position: relative;
+}
+
+.navbar .button-content img {
     width: 150px;
     height: 150px;
     padding: 5px;
-    
+}
+
+.navbar .button-content .text-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+}
+
+.navbar .button-content .button-text {
+    color: #FFF;
+    font-size: 30px;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 1s;
+    pointer-events: none;
+    -webkit-text-stroke-width: 1.4px;
+    -webkit-text-stroke-color: #000;
+}
+
+.navbar button:hover .button-text {
+    opacity: 1;
 }
 
 .info-jogo{
@@ -180,7 +221,7 @@ header{
     border-radius: 50px;
     width: 200px;
     margin: 30px 70px;
-    text-align: center;
+    text-align: start;
     padding: 10px;
 }
 
@@ -211,12 +252,9 @@ select{
 
 .info-linha{
     display: flex;
-    justify-content: center;
 }
 
-.info-linha img{
-    vertical-align:middle;
-}
+
 
 .info{
     display: flex;
@@ -224,7 +262,7 @@ select{
 }
 
 .info-content{
-    margin: 10px 10px;
+    margin: 10px 50px;
     color: #FFF;
 }
 
